--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">iShop</string>
+    <string name="error_camera_support">Camera is not supported</string>
 </resources>
