--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -11,12 +11,14 @@
     <string name="scan_qr_text">Scan Shop QR Code to Start Navigation</string>
 
     <string name="tts_loc_error">Unable to find current location</string>
-    <string name="tts_loc">Currently in the %1$s section</string>
-    <string name="tts_promo_none">No promotions found</string>
+    <string name="tts_loc">You are currently in the %1$s section</string>
+    <string name="tts_promo_none">No promotions found in this section</string>
     <string name="tts_promo_number">Found %1$d promotions</string>
     <string name="tts_promo_error">Failed to get promotions due to network issue</string>
     <string name="tts_scan_qr">Scan the store QR code to start navigation</string>
     <string name="tts_map_loading">Loading the shop map</string>
     <string name="tts_map_load_ok">Loaded shop map successfully</string>
     <string name="tts_map_load_error">Failed to load shop map due to network issue</string>
+    <string name="tts_search_error">Item search failed due to network issue</string>
+    <string name="tts_search_not_found">No items found in the shop</string>
 </resources>
