--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="search_btn">Search</string>
     <string name="search_btn_desc">Search for item in store</string>
     <string name="promo_btn_desc">List the current ongoing promotions.</string>
+    <string name="navigation_btn">Navigation</string>
 
     <string name="scan_qr_text">Scan Shop QR Code to Start Navigation</string>
 
