--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="tts_server_error">Failed to connect to server</string>
     <string name="tts_nav_complete">You have reached your destination</string>
     <string name="tts_nav_no_dest">No destination selected</string>
+    <string name="map_loader_desc">Loading Shop Map</string>
 </resources>
